# Unitra.Service.API

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CHANGELOG.md  CICD_TEST.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  TODO.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  deploy-prod.yml  deploy-staging.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  9f1a74577453_add_user_tier_and_created_at_indexes.py
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: router.py
app/api/v1/: __init__.py  auth.py  billing.py  health.py  translate.py  usage.py
app/auth/: __init__.py  backend.py  manager.py  models.py  router.py  schemas.py
app/core/: __init__.py  exception_handlers.py  exceptions.py  limits.py  logging.py  middleware.py  security.py
app/db/: __init__.py  base.py  redis.py  session.py
app/models/: __init__.py  refresh_token.py  subscription.py  usage.py  user.py
app/schemas/: __init__.py  common.py
app/services/: __init__.py  mt_client.py
app/services/batch/: __init__.py  batcher.py  config.py  metrics.py  processor.py  queue.py
docker/: Dockerfile.dev  docker-compose.yml
docs/: DEPLOYMENT_PLAN.md  GIT_WORKFLOW.md
scripts/: test_batch_integration.py
tests/: conftest.py  test_billing.py  test_dependencies.py  test_exception_handlers.py  test_exceptions.py  test_health.py  test_health_extended.py  test_integration.py  test_limits.py  test_logging.py  test_logging_extended.py  test_main.py  test_middleware.py  test_models.py  test_rate_limit_middleware.py  test_redis.py  test_schemas.py  test_session.py  test_translate.py
tests/integration/: __init__.py  conftest.py  test_batch_service.py  test_modal_mt.py
tests/test_auth/: __init__.py  test_custom_endpoints.py  test_email_verification.py  test_login.py  test_manager.py  test_password_reset.py  test_protected_routes.py  test_registration.py  test_router.py  test_token_management.py  test_user_management.py
tests/test_batch/: __init__.py  test_batcher.py  test_priority_queue.py  test_service.py  test_tier_config.py
