[tool.poetry]
name = "unitra-service-api"
version = "0.1.0"
description = "FastAPI backend for Unitra translation platform"
authors = ["Unitra Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
redis = "^5.0.0"
httpx = "^0.26.0"
stripe = "^7.0.0"
alembic = "^1.13.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.2.0"
structlog = "^24.1.0"
# FastAPI-Users authentication
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
aiosmtplib = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
bandit = "^1.7.0"
httpx = "^0.26.0"
pre-commit = "^3.6.0"
commitizen = "^3.13.0"
aiosqlite = "^0.19.0"
faker = "^22.0.0"
freezegun = "^1.2.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]

# Ignore B008 for FastAPI Depends() pattern (false positive)
[tool.ruff.lint.per-file-ignores]
"app/**/*.py" = ["B008"]  # FastAPI Depends() in defaults is intentional

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: mark test as integration test (requires external services like Modal)",
    "slow: mark test as slow (may take >10s)",
]
# Default: skip integration tests unless explicitly requested
addopts = "-m 'not integration'"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version"
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"

[tool.ruff.isort]
known-first-party = ["app"]
